      quote an already quoted string in the request later (Closes: #602412)
  * apt-pkg/contrib/netrc.cc:
    - replace non-posix gnu-extension strdupa with strdup
  * apt-pkg/packagemanager.cc:
    - ensure for Multi-Arch:same packages that they are unpacked in
      lock step even in immediate configuration (Closes: #618288)

 -- Michael Vogt <mvo@debian.org>  Mon, 16 May 2011 14:57:52 +0200

apt (0.8.14.1) unstable; urgency=low

  * apt-pkg/acquire-item.cc:
    - Only try to rename existing Release files (Closes: #622912)

 -- Julian Andres Klode <jak@debian.org>  Sat, 16 Apr 2011 14:36:10 +0200

apt (0.8.14) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt-pkg/indexcopy.cc:
    - Use RealFileExists() instead of FileExists(), allows amongst other
      things a directory named Sources to exist on a CD-ROM (LP: #750694).
  * apt-pkg/acquire-item.cc:
    - Use Release files even if they cannot be verified (LP: #704595)
  * cmdline/apt-get.cc:
    - Do not install recommends for build-dep (Closes: #454479) (LP: #245273)
  * apt-pkg/deb/deblistparser.cc:
    - Handle no space before "[" in build-dependencies (LP: #72344)
  * apt-pkg/policy.cc:
    - Allow pinning by glob() expressions, and regular expressions
      surrounded by slashes (the "/" character) (LP: #399474)
      (Closes: #121132)
  * debian/control:
    - Set Standards-Version to 3.9.2
  
  [ Michael Vogt ]
  * mirror method:
    - do not crash if the mirror file fails to download
  * apt-pkg/aptconfiguration.cc:
    - fix comparing for a empty string
  * debian/apt.cron.daily:
    - run unattended-upgrades even if there was a error during
      the apt-get update (LP: #676295)

  [ David Kalnischkies ]
  * apt-pkg/pkgcache.cc:
    - use the native Architecture stored in the cache header instead of
      loading it from configuration as suggested by Julian Andres Klode

 -- Julian Andres Klode <jak@debian.org>  Fri, 15 Apr 2011 14:28:15 +0200

apt (0.8.13.2) unstable; urgency=low
